@@ -10,9 +10,9 @@ import com.dpw.runner.shipment.services.commons.requests.*;
 import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.config.SyncConfig;
 import com.dpw.runner.shipment.services.dao.interfaces.*;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerAssignRequest;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerAssignListRequest;
 import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerNumberCheckResponse;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerPackAssignDetachRequest;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerPackADInShipmentRequest;
 import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerSummaryResponse;
 import com.dpw.runner.shipment.services.dto.request.ContainerRequest;
 import com.dpw.runner.shipment.services.dto.request.EventsRequest;
@@ -491,17 +491,43 @@ public class ContainerService implements IContainerService {
             if(!IsStringNullOrEmpty(container.getAchievedVolumeUnit()) && !IsStringNullOrEmpty(container.getAllocatedVolumeUnit()) && !container.getAchievedVolumeUnit().equals(container.getAllocatedVolumeUnit())) {
                 BigDecimal val = new BigDecimal(convertUnit(Constants.VOLUME, container.getAchievedVolume(), container.getAchievedVolumeUnit(), container.getAllocatedVolumeUnit()).toString());
                 container.setAchievedVolume(val);
-                container.setAchievedVolumeUnit(container.getAllocatedVolumeUnit());
             }
             if(!IsStringNullOrEmpty(container.getAchievedWeightUnit()) && !IsStringNullOrEmpty(container.getAllocatedWeightUnit()) && !container.getAchievedWeightUnit().equals(container.getAllocatedWeightUnit())) {
                 BigDecimal val = new BigDecimal(convertUnit(Constants.MASS, container.getAchievedWeight(), container.getAchievedWeightUnit(), container.getAllocatedWeightUnit()).toString());
                 container.setAchievedWeight(val);
-                container.setAchievedWeightUnit(container.getAllocatedWeightUnit());
             }
+            container.setAchievedVolumeUnit(container.getAllocatedVolumeUnit());
+            container.setAchievedWeightUnit(container.getAllocatedWeightUnit());
+            container = calculateUtilization(container);
             return container;
         } catch (Exception e) {
             throw new Exception(e);
         }
+    }
+
+    @Override
+    public Containers calculateUtilization(Containers container) {
+        if(container.getAchievedVolume() == null)
+            container.setAchievedVolume(BigDecimal.ZERO);
+        if(container.getAchievedWeight() == null)
+            container.setAchievedWeight(BigDecimal.ZERO);
+        if(container.getAllocatedWeight() != null) {
+            if(container.getAchievedWeight().compareTo(container.getAllocatedWeight()) > 0)
+                container.setWeightUtilization("100");
+            else
+                container.setWeightUtilization( String.valueOf((container.getAchievedWeight().divide(container.getAllocatedWeight())).multiply(new BigDecimal(100)).doubleValue()) );
+        }
+        else
+            container.setWeightUtilization("0");
+        if(container.getAllocatedVolume() != null) {
+            if(container.getAchievedVolume().compareTo(container.getAllocatedVolume()) > 0)
+                container.setVolumeUtilization("100");
+            else
+                container.setVolumeUtilization( String.valueOf((container.getAchievedVolume().divide(container.getAllocatedVolume())).multiply(new BigDecimal(100)).doubleValue()) );
+        }
+        else
+            container.setVolumeUtilization("0");
+        return container;
     }
 
     @Override
@@ -520,45 +546,45 @@ public class ContainerService implements IContainerService {
         }
     }
 
-    @Override
-    public ResponseEntity<?> calculateAchievedQuantity_onPackAssign(CommonRequestModel commonRequestModel) {
-        String responseMsg;
-        try {
-            ContainerPackAssignDetachRequest request = (ContainerPackAssignDetachRequest) commonRequestModel.getData();
-
-            Optional<Containers> containersOptional = containerDao.findById(request.getContainerId());
-            if(containersOptional.isPresent()) {
-                Containers container = containersOptional.get();
-                changeAchievedUnit(container);
-                ListCommonRequest listCommonRequest = constructListCommonRequest("id", request.getPacksId(), "IN");
-                Pair<Specification<Packing>, Pageable> pair = fetchData(listCommonRequest, Packing.class);
-                Page<Packing> packings = packingDao.findAll(pair.getLeft(), pair.getRight());
-                if(!packings.isEmpty() && packings.get().findAny().isPresent()) {
-                    List<Packing> packingList = packings.stream().toList();
-                    for(Packing packing: packingList) {
-                        if(packing.getWeight() != null && !packing.getWeightUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedWeightUnit())) {
-                            BigDecimal val = new BigDecimal(convertUnit(Constants.MASS, packing.getWeight(), packing.getWeightUnit(), container.getAchievedWeightUnit()).toString());
-                            container.setAchievedWeight(container.getAchievedWeight().add(val));
-                            container.setWeightUtilization(((container.getAchievedWeight().divide(container.getAllocatedWeight())).multiply(new BigDecimal(100))).toString());
-                        }
-                        if(packing.getVolume() != null && !packing.getVolumeUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedVolumeUnit())) {
-                            BigDecimal val = new BigDecimal(convertUnit(Constants.VOLUME, packing.getVolume(), packing.getVolumeUnit(), container.getAchievedVolumeUnit()).toString());
-                            container.setAchievedVolume(container.getAchievedVolume().add(val));
-                            container.setVolumeUtilization(((container.getAchievedVolume().divide(container.getAllocatedVolume())).multiply(new BigDecimal(100))).toString());
-                        }
-                    }
-                    return assignContainers(packingList, container, request.getShipmentId());
-                }
-            }
-            responseMsg = "Data not available for provided request";
-            throw new DataRetrievalFailureException(responseMsg);
-        } catch (Exception e) {
-            responseMsg = e.getMessage() != null ? e.getMessage()
-                    : DaoConstants.DAO_CALCULATION_ERROR;
-            log.error(responseMsg, e);
-            return ResponseHelper.buildFailedResponse(responseMsg);
-        }
-    }
+//    @Override
+//    public ResponseEntity<?> calculateAchievedQuantity_onPackAssign(CommonRequestModel commonRequestModel) {
+//        String responseMsg;
+//        try {
+//            ContainerPackADInShipmentRequest request = (ContainerPackADInShipmentRequest) commonRequestModel.getData();
+//
+//            Optional<Containers> containersOptional = containerDao.findById(request.getContainerId());
+//            if(containersOptional.isPresent()) {
+//                Containers container = containersOptional.get();
+//                changeAchievedUnit(container);
+//                ListCommonRequest listCommonRequest = constructListCommonRequest("id", request.getPacksId(), "IN");
+//                Pair<Specification<Packing>, Pageable> pair = fetchData(listCommonRequest, Packing.class);
+//                Page<Packing> packings = packingDao.findAll(pair.getLeft(), pair.getRight());
+//                if(!packings.isEmpty() && packings.get().findAny().isPresent()) {
+//                    List<Packing> packingList = packings.stream().toList();
+//                    for(Packing packing: packingList) {
+//                        if(packing.getWeight() != null && !packing.getWeightUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedWeightUnit())) {
+//                            BigDecimal val = new BigDecimal(convertUnit(Constants.MASS, packing.getWeight(), packing.getWeightUnit(), container.getAchievedWeightUnit()).toString());
+//                            container.setAchievedWeight(container.getAchievedWeight().add(val));
+//                            container.setWeightUtilization(((container.getAchievedWeight().divide(container.getAllocatedWeight())).multiply(new BigDecimal(100))).toString());
+//                        }
+//                        if(packing.getVolume() != null && !packing.getVolumeUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedVolumeUnit())) {
+//                            BigDecimal val = new BigDecimal(convertUnit(Constants.VOLUME, packing.getVolume(), packing.getVolumeUnit(), container.getAchievedVolumeUnit()).toString());
+//                            container.setAchievedVolume(container.getAchievedVolume().add(val));
+//                            container.setVolumeUtilization(((container.getAchievedVolume().divide(container.getAllocatedVolume())).multiply(new BigDecimal(100))).toString());
+//                        }
+//                    }
+//                    return assignContainers(packingList, container, request.getShipmentId());
+//                }
+//            }
+//            responseMsg = "Data not available for provided request";
+//            throw new DataRetrievalFailureException(responseMsg);
+//        } catch (Exception e) {
+//            responseMsg = e.getMessage() != null ? e.getMessage()
+//                    : DaoConstants.DAO_CALCULATION_ERROR;
+//            log.error(responseMsg, e);
+//            return ResponseHelper.buildFailedResponse(responseMsg);
+//        }
+//    }
 
     public ResponseEntity<?> assignContainers(List<Packing> packingList, Containers container, Long shipmentId) {
         String responseMsg;
@@ -583,31 +609,68 @@ public class ContainerService implements IContainerService {
     public ResponseEntity<?> calculateAchievedQuantity_onPackDetach(CommonRequestModel commonRequestModel) {
         String responseMsg;
         try {
-            ContainerPackAssignDetachRequest request = (ContainerPackAssignDetachRequest) commonRequestModel.getData();
+            ContainerPackADInShipmentRequest request = (ContainerPackADInShipmentRequest) commonRequestModel.getData();
 
             Optional<Containers> containersOptional = containerDao.findById(request.getContainerId());
             if(containersOptional.isPresent()) {
                 Containers container = containersOptional.get();
                 changeAchievedUnit(container);
-                ListCommonRequest listCommonRequest = constructListCommonRequest("id", request.getPacksId(), "IN");
-                Pair<Specification<Packing>, Pageable> pair = fetchData(listCommonRequest, Packing.class);
-                Page<Packing> packings = packingDao.findAll(pair.getLeft(), pair.getRight());
-                if(!packings.isEmpty() && packings.get().findAny().isPresent())
-                {
-                    List<Packing> packingList = packings.stream().toList();
-                    for(Packing packing: packingList) {
-                        if(packing.getWeight() != null && !packing.getWeightUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedWeightUnit())) {
-                            BigDecimal val = new BigDecimal(convertUnit(Constants.MASS, packing.getWeight(), packing.getWeightUnit(), container.getAchievedWeightUnit()).toString());
-                            container.setAchievedWeight(container.getAchievedWeight().subtract(val));
-                            container.setWeightUtilization(((container.getAchievedWeight().divide(container.getAllocatedWeight())).multiply(new BigDecimal(100))).toString());
+                ShipmentDetails shipmentDetails = shipmentDao.findById(request.getShipmentId()).get();
+                if(request.getPacksId() != null && request.getPacksId().size() > 0) {
+                    ListCommonRequest listCommonRequest = constructListCommonRequest("id", request.getPacksId(), "IN");
+                    Pair<Specification<Packing>, Pageable> pair = fetchData(listCommonRequest, Packing.class);
+                    Page<Packing> packings = packingDao.findAll(pair.getLeft(), pair.getRight());
+                    if(!packings.isEmpty() && packings.get().findAny().isPresent())
+                    {
+                        List<Packing> packingList = packings.stream().toList();
+                        for(Packing packing: packingList) {
+                            if(!shipmentDetails.getShipmentType().equals(Constants.CARGO_TYPE_FCL)) {
+                                if(packing.getWeight() != null && !packing.getWeightUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedWeightUnit())) {
+                                    BigDecimal val = new BigDecimal(convertUnit(Constants.MASS, packing.getWeight(), packing.getWeightUnit(), container.getAchievedWeightUnit()).toString());
+                                    container.setAchievedWeight(container.getAchievedWeight().subtract(val));
+                                    container.setWeightUtilization( String.valueOf((container.getAchievedWeight().divide(container.getAllocatedWeight())).multiply(new BigDecimal(100)).doubleValue()) );
+                                }
+                                if(packing.getVolume() != null && !packing.getVolumeUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedVolumeUnit())) {
+                                    BigDecimal val = new BigDecimal(convertUnit(Constants.VOLUME, packing.getVolume(), packing.getVolumeUnit(), container.getAchievedVolumeUnit()).toString());
+                                    container.setAchievedVolume(container.getAchievedVolume().subtract(val));
+                                    container.setVolumeUtilization( String.valueOf((container.getAchievedVolume().divide(container.getAllocatedVolume())).multiply(new BigDecimal(100)).doubleValue()) );
+                                }
+                            }
                         }
-                        if(packing.getVolume() != null && !packing.getVolumeUnit().isEmpty() && !IsStringNullOrEmpty(container.getAchievedVolumeUnit())) {
-                            BigDecimal val = new BigDecimal(convertUnit(Constants.VOLUME, packing.getVolume(), packing.getVolumeUnit(), container.getAchievedVolumeUnit()).toString());
-                            container.setAchievedVolume(container.getAchievedVolume().subtract(val));
-                            container.setVolumeUtilization(((container.getAchievedVolume().divide(container.getAllocatedVolume())).multiply(new BigDecimal(100))).toString());
+                        if(shipmentDetails.getShipmentType().equals(Constants.CARGO_TYPE_FCL)) {
+                            listCommonRequest = constructListCommonRequest("shipmentId", shipmentDetails.getId(), "=");
+                            pair = fetchData(listCommonRequest, Packing.class);
+                            Page<Packing> allPackings = packingDao.findAll(pair.getLeft(), pair.getRight());
+                            boolean removeAllPacks = true;
+                            if(allPackings != null) {
+                                allPackings.getContent();
+                                if (allPackings.getContent().size() > 0) {
+                                    for (Packing packing : allPackings.getContent()) {
+                                        if (!request.getPacksId().contains(packing.getId()) && Objects.equals(packing.getContainerId(), container.getId())) {
+                                            removeAllPacks = false;
+                                            break;
+                                        }
+                                    }
+                                }
+                            }
+                            if(removeAllPacks) {
+                                container.setAchievedWeight(BigDecimal.ZERO);
+                                container.setAchievedVolume(BigDecimal.ZERO);
+                                container.setWeightUtilization("0");
+                                container.setVolumeUtilization("0");
+                            }
                         }
+                        return detachContainer(packingList, container, request.getShipmentId());
                     }
-                    return detachContainer(packingList, container, request.getShipmentId());
+                }
+                else {
+                    if(shipmentDetails.getShipmentType().equals(Constants.CARGO_TYPE_FCL)) {
+                        container.setAchievedWeight(BigDecimal.ZERO);
+                        container.setAchievedVolume(BigDecimal.ZERO);
+                        container.setWeightUtilization("0");
+                        container.setVolumeUtilization("0");
+                    }
+                    return detachContainer(null, container, request.getShipmentId());
                 }
             }
             responseMsg = "Data not available for provided request";
@@ -625,10 +688,12 @@ public class ContainerService implements IContainerService {
         try {
             shipmentsContainersMappingDao.detachShipments(container.getId(), List.of(shipmentId));
             Containers containers = containerDao.save(jsonHelper.convertValue(container, Containers.class));
-            for (Packing packing: packingList) {
-                packing.setContainerId(null);
+            if(packingList != null && packingList.size() > 0) {
+                for (Packing packing: packingList) {
+                    packing.setContainerId(null);
+                }
+                packingDao.saveAll(packingList);
             }
-            packingDao.saveAll(packingList);
             afterSave(containers, false);
             return ResponseHelper.buildSuccessResponse(convertEntityToDto(containers));
         } catch (Exception e) {
@@ -642,35 +707,63 @@ public class ContainerService implements IContainerService {
     @Override
     public ResponseEntity<?> getContainersForSelection(CommonRequestModel commonRequestModel) {
         String responseMsg;
-        Boolean lclAndSeaOrRoadFlag = false; // TODO- Remove this and fetch from tenant Settings and Shipment Data
-        Boolean IsConsolidatorFlag = true; // TODO- Remove this and fetch from tenant Settings
+        ShipmentSettingsDetails shipmentSettingsDetails = shipmentSettingsDao.getSettingsByTenantIds(List.of(TenantContext.getCurrentTenant())).get(0);
+        boolean lclAndSeaOrRoadFlag = shipmentSettingsDetails.getMultipleShipmentEnabled() != null && shipmentSettingsDetails.getMultipleShipmentEnabled();
+        boolean IsConsolidatorFlag = shipmentSettingsDetails.getIsConsolidator() != null && shipmentSettingsDetails.getIsConsolidator();
         List<Containers> containersList = new ArrayList<>();
         try {
-            ContainerAssignRequest containerAssignRequest = (ContainerAssignRequest) commonRequestModel.getData();
+            ContainerAssignListRequest containerAssignRequest = (ContainerAssignListRequest) commonRequestModel.getData();
             Long shipmentId = containerAssignRequest.getShipmentId();
             Long consolidationId = containerAssignRequest.getConsolidationId();
+            if (lclAndSeaOrRoadFlag) {
+                if(!containerAssignRequest.getTransportMode().equals(Constants.TRANSPORT_MODE_SEA) && !containerAssignRequest.getTransportMode().equals(Constants.TRANSPORT_MODE_ROA)) {
+                    lclAndSeaOrRoadFlag = false;
+                }
+            }
             ListCommonRequest listCommonRequest = constructListCommonRequest("consolidationId", consolidationId, "=");
             Pair<Specification<Containers>, Pageable> pair = fetchData(listCommonRequest, Containers.class);
             Page<Containers> containers = containerDao.findAll(pair.getLeft(), pair.getRight());
+            List<Containers> conts = new ArrayList<>();
             if(lclAndSeaOrRoadFlag) {
                 for (Containers container : containers.getContent()) {
                     List<ShipmentsContainersMapping> shipmentsContainersMappings = shipmentsContainersMappingDao.findByContainerId(container.getId());
-                    if(!shipmentsContainersMappings.stream().map(e -> e.getShipmentId()).collect(Collectors.toList()).contains(shipmentId)) {
+                    if(!shipmentsContainersMappings.stream().map(ShipmentsContainersMapping::getShipmentId).toList().contains(shipmentId)) {
+
                         if(container.getAllocatedWeight() != null && container.getAchievedWeight() != null && container.getAllocatedVolume() != null && container.getAchievedWeight() != null
                            && isNotEmpty(container.getAllocatedWeightUnit()) && isNotEmpty(container.getAllocatedVolumeUnit()) && isNotEmpty(container.getAchievedWeightUnit()) && isNotEmpty(container.getAchievedVolumeUnit())) {
+
                             BigDecimal achievedWeight = new BigDecimal(convertUnit(Constants.MASS, container.getAchievedWeight(), container.getAchievedWeightUnit(), container.getAllocatedWeightUnit()).toString());
                             BigDecimal achievedVolume = new BigDecimal(convertUnit(Constants.VOLUME, container.getAchievedVolume(), container.getAchievedVolumeUnit(), container.getAllocatedVolumeUnit()).toString());
+
                             if(achievedWeight.compareTo(container.getAllocatedWeight()) < 0 && achievedVolume.compareTo(container.getAllocatedVolume()) < 0) {
                                 containersList.add(container);
                             }
+                            else if(!IsConsolidatorFlag) {
+                                conts.add(container);
+                            }
                         }
+                        else
+                            containersList.add(container);
+                    }
+                }
+                if(conts.size() > 0) {
+                    for (Containers x : conts) {
+                        boolean flag = true;
+                        if(x.getShipmentsList() != null && x.getShipmentsList().size() > 0) {
+                            for(ShipmentDetails shipmentDetails : x.getShipmentsList()) {
+                                if(shipmentDetails.getShipmentType().equals(Constants.CARGO_TYPE_FCL))
+                                    flag = false;
+                            }
+                        }
+                        if (flag)
+                            containersList.add(x);
                     }
                 }
             }
             else {
                 for (Containers container : containers.getContent()) {
                     List<ShipmentsContainersMapping> shipmentsContainersMappings = shipmentsContainersMappingDao.findByContainerId(container.getId());
-                    if(!shipmentsContainersMappings.stream().map(e -> e.getShipmentId()).collect(Collectors.toList()).contains(shipmentId)) {
+                    if(!shipmentsContainersMappings.stream().map(ShipmentsContainersMapping::getShipmentId).toList().contains(shipmentId)) {
                         containersList.add(container);
                     }
                 }
